--- a/public/css/style.css
+++ b/public/css/style.css
@@ -832,10 +832,6 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -972,6 +968,10 @@ video {
   width: 1rem;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -986,6 +986,10 @@ video {
 
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .max-w-\[250px\] {
